# MuseBCI

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: decode_loop.py  simple_eye_mvmt_BCI.py
muse_bci/: __init__.py  decoding_loop.py  logging_config.py
muse_bci/decoders/: __init__.py  base.py
muse_bci/decoders/eye_mvmt_decoding/: __init__.py  simple_eye_mvmt.py
muse_bci/muse_eeg/: __init__.py  muse_stream.py
